fix top margins on mobile

--- a/recipes/recipe_styles.css
+++ b/recipes/recipe_styles.css
@@ -180,4 +180,5 @@ label[for*="rating"] { height: 27px;  line-height: 50px;}
 @media (max-width: 600px) {
   .large-nav { display:none;}
   .mobile-nav-icon {display: block;}
-}
+  h1 { margin-top:0px; }
+  .main_recipe { margin-top: 10px;}
